--- a/WWTExplorer3d/WWTExplorer.csproj
+++ b/WWTExplorer3d/WWTExplorer.csproj
@@ -2421,6 +2421,11 @@
     <None Include="Resources\point.png" />
     <None Include="Resources\target1.png" />
     <None Include="Resources\target2.png" />
+    <None Include="Resources\btnendpushed_mod.png" />
+    <None Include="Resources\btnendrest_mod.png" />
+    <None Include="Resources\btnstartpushed_mod.png" />
+    <None Include="Resources\btnstartrest_mod.png" />
+    <Content Include="Resources\PropertiesBackground_MOD.png" />
     <Content Include="Resources\TouchControlsNoHold.png" />
     <None Include="Resources\xbox360.png" />
     <None Include="Resources\xbox360Layour.jpg" />
