--- a/WWTExplorer3d/app.config
+++ b/WWTExplorer3d/app.config
@@ -20,13 +20,13 @@
     <value>DarkGoldenrod</value>
    </setting>
    <setting name="ShowConstellationBoundries" serializeAs="String">
-    <value>True</value>
+    <value>False</value>
    </setting>
    <setting name="ShowConstellationFigures" serializeAs="String">
     <value>True</value>
    </setting>
    <setting name="ShowConstellationSelection" serializeAs="String">
-    <value>True</value>
+    <value>False</value>
    </setting>
    <setting name="ShowClouds" serializeAs="String">
     <value>True</value>
@@ -302,7 +302,7 @@
     <value>True</value>
    </setting>
    <setting name="FullScreenTours" serializeAs="String">
-    <value>True</value>
+    <value>False</value>
    </setting>
    <setting name="LastDomeConfigFile" serializeAs="String">
     <value />
